# cricket-intelligence-system

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  pytest.ini  requirements.txt
agent/: cli.py  cricket_agent.py  schemas.py
api/: mcp_server.py
api/mcp_tools/: cricket_news_tools.py  cricket_stats_tools.py
config/: cricket_news.yaml
data/chroma_db/: chroma.sqlite3
data/csv_data/: test_Bowling_Card.csv  test_Fow_Card.csv  test_Matches_Data.csv
data_pipelines/cricket_stats/: ingest_bronze.py  transform_silver.py
data_pipelines/news/: ingest.py
notebooks/: test_agent.ipynb
src/cricket_intelligence/: __init__.py  config.py  logging_config.py
src/cricket_intelligence/agent/: __init__.py  cricket_agent.py  insight_generator.py  mcp_client.py
src/cricket_intelligence/api/: __init__.py  mcp_server.py
src/cricket_intelligence/api/tools/: __init__.py  news_tools.py  stats_tools.py
src/cricket_intelligence/config/: logging.yaml
src/cricket_intelligence/core/: __init__.py  chromadb.py  embeddings.py  news_client.py
src/cricket_intelligence/pipelines/: __init__.py
src/cricket_intelligence/pipelines/news/: __init__.py  ingestion.py
src/cricket_intelligence/pipelines/stats/: __init__.py  bronze.py  silver.py
tests/: __init__.py  run_all_tests.py  test_agent_basic.py  test_news_pipeline.py  test_news_tools.py  test_quick.py  test_stats_pipeline.py  test_stats_tools.py
tests/e2e/: test_agent_basic.py
tests/integration/: test_news_pipeline.py
tests/unit/: test_news_tools.py  test_stats_tools.py
utils/: chromadb_manager.py  embedder.py
